= Next Release: 3.3

- Substitute '/_' only with regular files when using the directory watch option

= Release History

== 3.2: April 9, 2015

 - Execute the utility immediately after registering watch events. Old behavior
   is restored using new postpone option ('-p')
 - Relocated 'reload-browser' to http://entrproject.org/scripts/reload-browser
 - Drop FIFO support to further simply code and documentation. FIFO mode was
   conceptually good, but EXEC mode is intelligent hand easily handles the vast
   majority of use cases.
 - Remove kFreeBSD as a target platform

== 3.1: March 4, 2015

 - Return error code indicating exit reason after handling signals
 - Restart mode sets process group to ensure that wrapper scripts do not prevent
   signals from reaching child processes
 - Removed DEBUG printf statements

== 3.0: December 19, 2014

 - Man page highlights the flexibility of executing a commands using a shell
 - 'reload-browser', a cross-platform script for reloading the current tab in
   one or more browsers
 - system_test.sh auto-upgrades to bash if the default shell does not support
   the ERR trap
 - Workaround implemented for Linux using fstat(2) to detect if a binary was
   removed if inotify issues IN_ATTRIB but not IN_DELETE_SELF
 - Use calloc(3) to take advantage of overflow detection

== 2.9: June 10, 2014

 - RPM package by @funollet
 - Moved alternate Makefiles to contrib/
 - Trigger actions when a file is truncated on BSD
 - Improved format of DEBUG messages
 - Added missing extern for missing/fmemopen.c to avoid warning on MacOS 10.7+
 - No longer register NOTE_EXTEND; this event is not always merged with
   NOTE_WRITE on MacOS
 - New directory-watch option ('-d'). In this mode a shell while-loop can be
   used to track the addition of new files.


== 2.8: March 15, 2014

 - Iteratively check for new file system events using a 1ms timeout after a file
   has been renamed or removed in order to prevent the utility from being